src/objects/License_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>AD_University__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AD University</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>PRIMARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADDITIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SELF_SERVICE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>License</relationshipLabel>
        <relationshipName>License_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Download_Server__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download Server</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Opp_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Opp Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <referenceTo>LicenseDetail__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>License_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Need_Operations_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled. user will receive email notifications whenever license is provisioned/extended/modified/upgraded/ha license created.</inlineHelpText>
        <label>License Operations Notifications?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Service_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, the user will receive notification for service downtime for upgrade/maintenance.</inlineHelpText>
        <label>Service Notifications?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <label>License Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>License Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>